tests/ui/type-alias-impl-trait/generic_not_used.stderr
error: at least one trait must be specified
  --> $DIR/generic_not_used.rs:5:33
   |
LL | type WrongGeneric<T: 'static> = impl 'static;
   |                                 ^^^^^^^^^^^^

error: type parameter `V` is mentioned in hidden type of type alias impl trait, but is not declared in its generic args
  --> $DIR/generic_not_used.rs:10:5
   |
LL |     v
   |     ^

error: aborting due to 2 previous errors

